--- a/Translation/Sex Scene.txt
+++ b/Translation/Sex Scene.txt
@@ -239,7 +239,7 @@
 
 ……おじさん、いっぱい触ってくれて、ありがとね……。=...Oji-san, thank you for touching me so much...
 そろそろ、大丈夫だよ……？=I think I'm wet enough now...?
-夕は熱っぽい視線を返してくる……。=Yuu gives me a feverish gaze...
+夕は熱っぽい視線を返してくる……。=Yuu gave you a feverish gaze...
 
 はっ……あっ、はん……やぁ……えっちなおと、しちゃってる……=Haa...Aa, Han...Yaa...I'm making such naughty sounds...
 はっ……あっ、はん……やぁ……えっちなおと、しちゃってる……<color%3D#fca4bc>❤<color%3Dwhite>=Haa...Aa, Han...Yaa...I'm making such naughty sounds...<color%3D#fca4bc>❤<color%3Dwhite>
