--- a/Translation/Game.txt
+++ b/Translation/Game.txt
@@ -41,7 +41,7 @@
 こんな風に家庭的な朝食を摂るのはいつ以来だろうか。あなたは感慨に浸りながら、夕と一緒に朝食を囲む。=It's been ages since you last ate a homemade breakfast. You finished breakfast with Yuu while being overwhelmed by your emotions.
 作りたての手料理は温かく、優しい味がする。どの品もそつがなく、夕はずいぶんと料理に慣れているようだった。=Freshly prepared meals are warm and have a gentle taste to it. All of the dishes looked good, Yuu seemed to be used to cooking.
 二人で食器を片付けてから身支度を済ませて、夕のいれてくれたお茶で人心地つく。=The two of you finished the dishes, then you put on your suit and sat down comfortably, drinking the tea Yuu made for you.
-家を出る時間まで、まだ少し余裕がある……どうしようか。=You still have some time before work...You could...
+家を出る時間まで、まだ少し余裕がある……どうしようか。=You still had some time before work...You could...
 
 		#After actions
 あ、もう行くの？　ちょっと待って=Ah, are you going now?\nWait a minute...
@@ -150,8 +150,8 @@ Ehehe...I wonder.良く似合ってる？　そ、そう……嬉しいな。=Eh
 近場でのんびりできるところがいいと話がまとまって、隣駅のショッピングモールまで電車で向かう。=The two of you decided that a relaxing place nearby would be good. Both of you took a train to the shopping mall.
 日曜ということもあってモールの中はそれなりに賑わっていたが、人混みが気になるほどでもない。=Although it was Sunday, the mall was quite busy even though there wasn't that many people.
 せっかくなので服でも見ようかと言うと、夕は「それよりも」と雑貨屋を巡りたがった。=You suggested to go look at clothes, but Yuu said she wanted to look at the general store first.
-お部屋の中殺風景だし、もっと物を置いた方がいいよ。=Our room is kinda boring, so why don't we place more things in it.
-ほら、おじさん。これ可愛くない？= Look, Oji-san. Isn't this cute?
+お部屋の中殺風景だし、もっと物を置いた方がいいよ。=Our room is kinda boring, so why don't we place more things in it?
+ほら、おじさん。これ可愛くない？= Oji-san, look! Isn't this cute?
 お部屋の中殺風景だし、もっと物を置いた方がいいよ。ほら、おじさん。これ可愛くない？=Our room is kinda boring, so why don't we place more things in it. Look, Oji-san. Isn't this cute?
 思えばあの部屋はいつの間にか、帰ってきて寝るだけのための空間ではなくなっていた。=Thinking about it, that room wasn't just for coming back and sleeping now.
 あなたはしばらくの間、夕と一緒に小物を選んだ。=You browsed some accessories with Yuu for a bit.
@@ -166,18 +166,18 @@ Ehehe...I wonder.良く似合ってる？　そ、そう……嬉しいな。=Eh
 私と恋人みたいなことがしたかったの？=Did you want us to be like lovers?
 わ、私と……恋人に、なりたいの？=W-With me...do you want to be lovers?
 少なくとも、自分は夕と出会って助けられた。=At the very least, you were saved by meeting Yuu.
-夕を大切に思っているし、これからも一緒に居て欲しいと思う。=Yuu is important to you now, you hope to be with her in the future.
+夕を大切に思っているし、これからも一緒に居て欲しいと思う。=Yuu was important to you now, you hoped to be with her in the future.
 あなたは思っていたことをそのまま彼女に伝えると、夕は満面の笑みで応えてくれた。=When you told her what you thought, Yuu responded with a big smile.
-う、うん……私も、私もそう思ってた。=Y-Yes...Me too, I also feel the same.
+う、うん……私も、私もそう思ってた。=Y-Yes...Me too, I also feel the same way.
 えへへ……私たち、相思相愛だね。=Ehehe...We're in love with one another.
 ……あなたは今すぐに彼女を抱きしめたい気持ちを抑えつつ、夕の手を取って近くの路地に目配せする。=...While holding in the desire to hug her, you took Yuu's hand and led her to a nearby alley.
 あ……=Ah...
 あ……O-Ok. I'll do it...=Ah...O-Ok. I'll do it...
-人気のない静かな通りを歩いていると、すぐにラブホ街に入り込んだ。=Walking down a quiet street that wasn't popular, you soon approached a love hotel.
+人気のない静かな通りを歩いていると、すぐにラブホ街に入り込んだ。=Walking down a quiet street, that wasn't popular, you soon approached a love hotel.
 ホテルの入り口にさしかかると夕は腕を絡めて、ぎゅっと手を繋いでくる。=When you reached the entrance, Yuu wrapped her hands around your arm.
 あなたは寄り添う彼女を連れてホテルの中へと入っていった。=After getting inside, you brought her closer to you.
-部屋に入った瞬間、あなたは夕の腰を強く抱き寄せた。=The moment you entered the room, you firmly embraced Yuu's waist.
-そのまま、気後れしてずっと触れられずにいた彼女の唇に、そっと口を近づけていく。=She nervously brought her lips close to yours, which have been untouched for all this time.
+部屋に入った瞬間、あなたは夕の腰を強く抱き寄せた。=The moment you two entered the room, you firmly embraced Yuu's waist.
+そのまま、気後れしてずっと触れられずにいた彼女の唇に、そっと口を近づけていく。=She nervously brought her lips close to yours which had been untouched for all this time.
 ……昨日は、すごかったね。=...Yesterday was amazing.
 私、まだドキドキしてる……おじさんと初めて、ちゃんと繋がった感じがして……。=I'm still feeling excited...Oji-san, for the first time, I feel like we're properly connected now.
 ごはんできてるから、顔洗ってきてね。= Breakfast is ready, so go wash your face.
