--- a/Translation/Interaction Screen.txt
+++ b/Translation/Interaction Screen.txt
@@ -400,7 +400,7 @@ Kyaa ……ちょっとぉ、今こっそりめくろうとしたでしょー？
 後釜になった人物も前社長の弟だ。どうせ何も変わらないだろう、とあなたは夕に答えた。=The current successor is the former president's younger brother. You tell Yuu that it will change nothing.
 ……そうでもないかもよ？=...It won't?
 #3
-……特に興味を引く番組はなかった。=...There were no programs that were particularly interesting.
+……特に興味を引く番組はなかった。=...There were no particularly interesting programs to watch.
 
 // Buying
 
