--- a/Translation/UI.txt
+++ b/Translation/UI.txt
@@ -61,7 +61,7 @@ Day2(日) あと5日=Day 2 (day) 5 more days
 朝まで何度も=Many times until morning
 エピローグ=Epilogue
  
-０１：夕に口でしてもらう=01: Have Yuu give you a blowjob.
+０１：夕に口でしてもらう=01: Let Yuu give you a blowjob.
 ０２：何度も口でしてもらっていると…？=02: When you are given blowjob many times...?
 ０３：金曜の夜、部屋に置かれている体操着袋をクリック=03: On friday at night. Click on Yuu's gym bag.
 ０４：休日に夕をデートに誘う=04: Invite Yuu to a holiday date.
@@ -73,7 +73,7 @@ Day2(日) あと5日=Day 2 (day) 5 more days
 １０：０９をもう一度見に行くと…？=10: When will you do it again...?
 １１：１０の続き=11: Continuation of 10.
 １２：マＸＸＸＸＸニを買ってから休日に出かける（０４以降）=12: Go out on a holiday after you bought a... (after 04)
-１３：しばらく放置したまま、早めに休むと…？（０４以降＆０８以降）=13: What happens if you go to sleep early after taking a bath? (after 04 or 08)
+１３：しばらく放置したまま、早めに休むと…？（０４以降＆０８以降）=13: What happens if you go to sleep early because you are too tired? (after 04 or 08)
 Ａ１：旅行ガイドを買ってから、部屋画面で夕を旅行に誘う（０４以降）=A1: After buying a travel guide, invite Yuu to travel on the room screen. (after 04)
 Ａ２：Ａ１の続き=A2: Continuation of A1.
 Ａ３：Ａ２の続き=A3: Continuation of A2.
@@ -199,18 +199,18 @@ Day2(日) あと5日=Day 2 (day) 5 more days
 夕はタッチして呼びかけることもできます。=You can also touch Yuu by clicking on her.
 選択肢にはLPを必要とする項目が表示されることがあります。=Actions requiring LP may be displayed in choices.
 持っているアイテムを使ったり、好きな衣装に着替えてもらうよう頼むことができます。=You can ask her to use a specific item on the inventory or change to her favorite costume.
-部屋エッチでは、夕の体を直接タッチして愛撫することもできます。=During ecchi, you can also caress Yuu by touching her body directly.
+部屋エッチでは、夕の体を直接タッチして愛撫することもできます。=During sex, you can also caress Yuu by touching her body directly.
 Ａキー：自動文章送り\nＥＳＣキー：オプション=A- key: Auto read mode \nESC key: Open config.
 最新の配達ドローンによる送料無料と高速配送がウリの、人気通販サイトです。=Buy anything from the popular online store "Uri", free shipping by tomorrow evening with our drones.
 ローターを持っている場合、画面内の夕に対して使うことができます。=If you have a rotor, you can use it on Yuu during the ecchi scene.
-表示が？？？になっている項目は、特殊なアイテムを購入することで数値が表示されるようになります。=Can you see the ??? Numbers will appear when you purchase special items.
+表示が？？？になっている項目は、特殊なアイテムを購入することで数値が表示されるようになります。=You can see the ??? numbers which will appear when you purchase special items.
 入浴にはLPの回復と、当日中のパラメータ上昇量を高める効果があります。=Bathing has the effect of recovering LP and increasing the amount you gain for the rest of the day.
 ホイール↑：バックログ右クリック：ウィンドウ消去=Scroll Up：Back Log\nRight click：Hide UI
 ゲーム中にタイトルに戻りたいときは、一度オプションを開いてみてください。=If you want to return to the title screen, open the options menu.
-一度見たＨシーンはアルバムに登録され、タイトル画面から閲覧することができます。=After seeing a H scene, it will be registered in the album and can be viewed from the title screen.
+一度見たＨシーンはアルバムに登録され、タイトル画面から閲覧することができます。=After seeing a H-scene, it will be registered in the album and can be viewed from the title screen.
 ＣＴＲＬ：強制スキップＳキー：既読スキップ=ＣＴＲＬ：Force Skip\nＳ-Key：Skip read
 夕をタッチする部位によっては特別な反応が得られます。あまり触りすぎると……？=Depending on where you touch Yuu, she will give a different response. If you touch her too much...?
-注文した商品は翌日夕が受け取ってくれており、帰宅後に一緒に開封します。=Yuu will receive the items you ordered tomorrow evening and will open them together after you return.
+注文した商品は翌日夕が受け取ってくれており、帰宅後に一緒に開封します。=Yuu will receive the items you ordered tomorrow evening and will open them with you after you return.
 Ａキー：自動文章送りＥＳＣキー：オプション=Ａ-key：Automatic text\nＥＳＣ-key：Options
 -----------------------------------------------------------------------------------------------------------------------------
 
