proofread hot spring event

--- a/Translation/Game.txt
+++ b/Translation/Game.txt
@@ -189,33 +189,33 @@ Ehehe...I wonder.良く似合ってる？　そ、そう……嬉しいな。=Eh
 夕が行ってみたいと言うのでラーメン屋で腹ごなしをして、駅前でショッピングを楽しんだ。=Yuu wanted to try eating at the ramen shop. Afterwards, the two of you enjoyed shopping around the station square.
 
 // Hot Springs
-へえ。今度の土曜日、おやすみ取れそうなんだ？=Hey. You're going to get a day off next Saturday, right?
+へえ。今度の土曜日、おやすみ取れそうなんだ？=Hey, you're going to get a day off next saturday, right?
 　良かったねえ。= That's good.
-へえ。今度の土曜日、おやすみ取れそうなんだ？　良かったねえ。=Hey. You're going to get a day off next Saturday, right? That's good.
-わ、私はいつでも大丈夫だよ。= I-I'm ok with whenever.
-……あ。前に話した温泉旅行、本当に行くんだ。=...Ah. I really want to go on the hot spring trip we talked about before.
-……あ。前に話した温泉旅行、本当に行くんだ。わ、私はいつでも大丈夫だよ。=...Ah. I really want to go on the hot spring trip we talked about before. I-I'm ok with whenever.
+へえ。今度の土曜日、おやすみ取れそうなんだ？　良かったねえ。=Hey, you're going to get a day off next saturday, right? That's good.
+わ、私はいつでも大丈夫だよ。= I-I'm ok with whenever you are.
+……あ。前に話した温泉旅行、本当に行くんだ。=...Ah, I really want to go on the hot spring trip we talked about before.
+……あ。前に話した温泉旅行、本当に行くんだ。わ、私はいつでも大丈夫だよ。=...Ah, I really want to go on the hot spring trip we talked about before. I-I'm ok with whenever you are.
 ノートＰＣから旅行サイトを開いて、事前に目をつけていた旅館を夕と相談する。=You opened a travel site on your laptop, and discussed with Yuu about potential inns.
-近場で和室、できれば風呂付き。土曜と日曜の一泊二日。すぐに話はまとまった=A nearby Japanese style room with a bath would be nice. You two settled on it for Saturday and Sunday.
+近場で和室、できれば風呂付き。土曜と日曜の一泊二日。すぐに話はまとまった=A nearby Japanese style room with a bath would be nice. You two settled on it for saturday and sunday.
 えへへ……楽しみだね。= Ehehe...I'm looking forward to it.
-……予約のボタン、押しちゃったね。=...I pressed the reservation button.
-……予約のボタン、押しちゃったね。えへへ……楽しみだね。=...I pressed the reservation button. Ehehe...I'm looking forward to it.
+……予約のボタン、押しちゃったね。=...I press the reservation button.
+……予約のボタン、押しちゃったね。えへへ……楽しみだね。=...I press the reservation button. Ehehe...I'm looking forward to it.
 
 いよいよ明日だね。準備はできてるよ。=It's finally tomorrow. I'm all ready.
 ……ちょっと早いけど、今日はもうお風呂入って寝よっか。=...It's a little early, but let's go bathe and sleep.
-ふぅ……明日の温泉も楽しみだね。=Fuu...I'm looking forward to the hot springs tomorrow.
+ふぅ……明日の温泉も楽しみだね。=Fuu...I'm looking forward to the hot spring tomorrow.
 あ、ちょっと！=Ah, Wait!
 今日はえっちはだめだよ？　明日まで我慢しよ、ね？= Not today ok? Hold it in until tomorrow, ok?
-あ、ちょっと！　今日はえっちはだめだよ？　明日まで我慢しよ、ね？=Ah, Wait! Not today ok? Hold it in until tomorrow, ok?
+あ、ちょっと！　今日はえっちはだめだよ？　明日まで我慢しよ、ね？=Ah, Wait! Not today, ok? Hold it in until tomorrow, ok?
 おやすみなさい！= Good night!
 ほらほら、早くお布団に入って。=Come come, get in bed.
 ほらほら、早くお布団に入って。おやすみなさい！=Come come, get in bed. Good night!
 
-どうかな。変なとこない？=How is it. It's not strange is it?
+どうかな。変なとこない？=How is it? It's not strange, is it?
 　そ、そう？　なら、良いんだけど……。=R-Really? That's good then...
 えへへ……それじゃ、いこっか。=Ehehe...Well then, let's go.
 有給を取ったあなたは夕を連れて、兼ねてより計画していた温泉旅行へと向かった。=After getting paid, you took Yuu on the planned hot spring trip.
-昼前に家を出て、片道1時間半ほどの旅館を目指す。=Leaving before noon, the two of you boarded a train that'll arrive at the inn in about an hour and a half. 
+昼前に家を出て、片道1時間半ほどの旅館を目指す。=Leaving before noon, the two of you boarded a train that would arrive at the inn in about an hour and a half. 
 なんかこういうの、修学旅行みたいでわくわくするね。=This kind of feels like a school trip, it's exciting.
 旅館って行ったことないから、楽しみだなー。= I'm looking forward to it since I've never been to a Ryokan.
 ていうか私、国内旅行って初めてだよ。=I mean, I've never been on a trip before.
@@ -233,16 +233,16 @@ Ehehe...I wonder.良く似合ってる？　そ、そう……嬉しいな。=Eh
 部屋に通された後、大浴場と夕飯の時間について簡単に説明を受ける。=After being brought to your room, you received a summary of the bath and dinner schedules.
 そうして仲居も去ると、あなたたちは二人揃って荷物を放って畳の上に座り込んだ。=After the hostess left, you organized the luggage and sat on the tatami.
 はぁ、癒やされる……和室もいいなー……ごろごろできるし。=Haa, I'm being healed...Japanese-style rooms are nice...you can laze around.
-ひとしきり夕と一緒にだらけてから、とりあえずお茶を飲んで一息つく。=The two of you enjoyed each others company while drinking tea for a bit.
+ひとしきり夕と一緒にだらけてから、とりあえずお茶を飲んで一息つく。=The two of you enjoyed each others' company while drinking tea for a bit.
 さて、これからどうしよっか。=Let's see, what should we do now?
 その前にちょっと、一汗流さない？= But before that, did you not sweat a little?
 とりあえず、浴衣に着替えたいんだけど……=For now, I'd like to change to a yukata...
 とりあえず、浴衣に着替えたいんだけど……その前にちょっと、一汗流さない？=For now, I'd like to change to a yukata...But before that, did you not sweat a little?
-お部屋のお風呂は、いつでも入れるって言ってたよ。=I heard that the room baths are always available. 
-そんな目で訴えられては断れまい。=I can't refuse after seeing those eyes.
+お部屋のお風呂は、いつでも入れるって言ってたよ。=I heard that the baths are always available. 
+そんな目で訴えられては断れまい。=You couldn't refuse after seeing those eyes.
 あなたはゆっくり立ち上がると、浴衣を手に取って洗面所へと向かった。=You got up slowly and grabbed a yukata, then head to the bath.
-さっと服を脱ぎ捨てて、部屋に備え付けの貸切露天へと二人で入る。=I took off my clothes and entered the private open-air bath.
-当然、バスタオルで体を隠すようなことはしない。=Naturally, I didn't cover my body with a towel.
+さっと服を脱ぎ捨てて、部屋に備え付けの貸切露天へと二人で入る。=You took off your clothes and entered the private open-air bath.
+当然、バスタオルで体を隠すようなことはしない。=Naturally, you didn't cover your body with a towel.
 わぁ……すごいね。なんか、写真より広くない？=Waa...Amazing. Isn't it bigger than it was in the pictures?
 ……そういえば、一緒にちゃんとしたお風呂に入るのって初めてだね。=...Speaking of which, this is the first time we properly bathed together.
 今更気恥ずかしくなってきたのか、少しはにかみながら夕が言う。=Even now Yuu seemed to be embarrassed after saying that.
@@ -252,28 +252,28 @@ Ehehe...I wonder.良く似合ってる？　そ、そう……嬉しいな。=Eh
 彼女は真面目な娘なのだ。= She was a serious girl after all.
 ……何をするのか少し期待したが、夕は熱心に背中を洗ってくれた。=...You didn't expect much, but Yuu washed your back eagerly. 
 ……何をするのか少し期待したが、夕は熱心に背中を洗ってくれた。彼女は真面目な娘なのだ。=...You didn't expect much, but Yuu washed your back eagerly. She was a serious girl after all.
-おじさん、なんか背中傷だらけだよ？　痒いからって掻きむしっちゃ駄目だよ。=Oji-san, your back itches? That's no good, you can't scratch it.
+おじさん、なんか背中傷だらけだよ？　痒いからって掻きむしっちゃ駄目だよ。=Oji-san, does your back itch? That's no good, you can't scratch it.
 我慢できない時は言ってくれれば、私が優しく掻いてあげるから、ね？=Let me know if you can't stand it. I'll gently scratch it for you, ok?
-お返しに夕の背中も洗ってあげて、お互いにかけ湯を浴びせてから湯船へと浸かる。=I washed Yuu's back in return. After washing ourselves off, we soaked in the bath.
+お返しに夕の背中も洗ってあげて、お互いにかけ湯を浴びせてから湯船へと浸かる。=You then washed Yuu's back in return. After washing yourselves off, the two of you soaked in the bath.
 はぁ……あったまる……。=Haa...It's so warm...
 少し肌寒いくらいの気温に、ぬるめの温度が心地よい。=Since the weather was slightly chilly, the warm water was soothing.
-はぁ……良い景色だねえ……。=Haa...The scenery is nice...
+はぁ……良い景色だねえ……。=Haa...The scenery is so nice...
 んー……=Nn...
-んー……はぁ……良い景色だねえ……。=Nn...Haa...The scenery is nice...
-夕も自然の中にある温泉を全身で堪能しながら、思う存分羽を伸ばしているようだった。=Yuu stretched her limbs while enjoying the hot springs and nature around her.
+んー……はぁ……良い景色だねえ……。=Nn...Haa...The scenery is so nice...
+夕も自然の中にある温泉を全身で堪能しながら、思う存分羽を伸ばしているようだった。=Yuu stretched her limbs while enjoying the hot spring and nature around her.
 
 あー……ちょっとのぼせた……。=Aa...I feel a little dizzy...
-貸切露天で存分に羽目を外したあなた達は、何食わぬ顔で一階のカフェスペースで涼んでいた。=After enjoying the open-air bath, the two of you are now cooling off at the cafe.
+貸切露天で存分に羽目を外したあなた達は、何食わぬ顔で一階のカフェスペースで涼んでいた。=After enjoying the open-air bath, the two of you were now cooling off at the cafe.
 ね、おじさん。奥の方に卓球台あったよ。後で一緒にやろうよ。=Hey, Oji-san. There's table tennis in the back. Let's play it together later.
 ねえ、お願いー。=Hey, please.
-温泉といえば定番なんでしょ？=Speaking of hot springs, isn't it standard?
+温泉といえば定番なんでしょ？=Speaking of hot springs, isn't it a standard?
 温泉といえば定番なんでしょ？ねえ、お願いー。=Speaking of hot springs, isn't it standard? Hey, please.
 でやー！=Oh!
 ぎゃー！=Kyaa!
 うあー、外したー！=Uaa, I lost!
 ……ふふ。やるね、おじさん。バドミントンプロの私を倒すなんて……。=...Fufu. Not bad, Oji-san. Impressive that you defeated a badminton pro like me.
-それは初耳だった。=That's the first time I heard of that.	[check]
-どうでもいいが、いろいろはだけたり揺れたりして危ない。=It didn't really matter, but moving around so much could be revealing, it's dangerous.
+それは初耳だった。=That was the first time you heard of that.
+どうでもいいが、いろいろはだけたり揺れたりして危ない。=Well, it didn't really matter, but moving around so much could be revealing and that was dangerous.
 周りに客がいなくて本当に良かったと、あなたは内心胸を撫で下ろす。=Luckily there were no other customers around, you secretly took a peek at her breasts.
 
 都会の喧騒と切り離されたような空間で、のんびりと余暇を満喫する。=Spending leisure time in a place far from city noise was relaxing.
@@ -285,7 +285,7 @@ Ehehe...I wonder.良く似合ってる？　そ、そう……嬉しいな。=Eh
 えへへ……おじさーん……=Ehehe...Ojiii-san...
 えへへ……おじさーん……<color%3D#fca4bc>❤<color%3Dwhite>=Ehehe...Ojiii-san...<color%3D#fca4bc>❤<color%3Dwhite>
 向かいに座っている夕が、手を伸ばしてじゃれてくる。=Yuu was playfully reaching out her hand from across the table.
-こんな風になんでもない時間が、じんわりと心の隙間を埋めていくような気がした。=It's times like these that I feel like my heart is full.	[check]
+こんな風になんでもない時間が、じんわりと心の隙間を埋めていくような気がした。=It was times like these that you felt like your heart was full.
 夕飯は旬の野菜を使った鍋料理と、川魚と山菜の天ぷらだった。=The dinner was hot pot dishes with season vegetables, tempura of river fish, and wild vegetables.
 なかなか食べる機会のない珍しい食材に夕は喜んで、あなたたちは大いに話を弾ませた。=The exotic food was very delightful. Yuu enjoyed herself too as the two of you talked.
 
@@ -294,8 +294,8 @@ Ehehe...I wonder.良く似合ってる？　そ、そう……嬉しいな。=Eh
 しみじみと夕が言う。確かに、たまにはこんな非日常を味うのも悪くないとあなたは返す。=Yuu said keenly. "You're right, this sort of a break from the norm isn't bad", you said back.
 お風呂でエッチとかねー……自宅じゃちょっと蒸し暑そうだしね。=Having sex in the bath...it'd be a little steamy at home.
 そう言って、夕は「またする？」と言わんばかりに挑発的な視線を送ってくる。=Having said that, Yuu gave you a provocative look as if asking "Do you want to do it again?"
-あなたは湯船にぷっかりと浮かぶ乳房へと、つい手を伸ばしそうになるのをぐっと堪えた。=You restrained from reaching for her breasts that were floating in the bath.	[check]
-まだまだ、夜はこれからなのだ。=Not yet, there was still night time.
+あなたは湯船にぷっかりと浮かぶ乳房へと、つい手を伸ばしそうになるのをぐっと堪えた。=You restrained from reaching out for her breasts that were floating in the bath.
+まだまだ、夜はこれからなのだ。=Not yet, it was still night time.
 ふぅ。=Fuu.
 Hmm……ふぅ。=Hmm...Fuu.
 私、そろそろあがるね。またのぼせちゃいそうだし。=I think it's time for me to get out. I'm starting to feel dizzy again.
@@ -304,18 +304,18 @@ Hmm……ふぅ。=Hmm...Fuu.
 おじさん、起きて。朝食間に合わなくなっちゃう=Oji-san, get up. We'll miss breakfast.
 激しい運動をしたせいか、あなたはぐっすりと眠ってしまっていた。=You were feeling groggy, probably due to last night.
 体中があちこち痛む中年と違い、夕はピンピンしている……これが若さだろうか。=Unlike middle-aged people with pain all over their body, Yuu was brimming with energy...So this is youth.
-昨晩、私にあれだけ好き放題しておいて、何いってるのさ。=Last night, I'm the one that let you do as you liked, what are you saying.
+昨晩、私にあれだけ好き放題しておいて、何いってるのさ。=Last night, I'm the one that let you do as you pleased, what are you saying?
 せっかくの旅行だもん。ギリギリまで楽しまなくっちゃ、もったいないよ。= We're on a trip. We have to enjoy it until the last moment, it'd be a waste otherwise.
 さ、行こう？=Well, let's go?
 さ、行こう？　せっかくの旅行だもん。ギリギリまで楽しまなくっちゃ、もったいないよ。=Well, let's go? We're on a trip. We have to enjoy it until the last moment, it'd be a waste otherwise.
 それから。=After that.
 あなたたちは朝食を取ってから、入りそびれていた大浴場に浸かりにいった。=Finishing breakfast, the two of you entered the large public bath.
-その後は部屋で一緒にくつろいだり、旅館の周りを散策したり……。=After that, the two of you relaxed in your room and walked around the inn...
-そうして過ごしているうちにチェックアウトの時間が迫り、土産を選んで旅館を後にしたのだった。=And like that, it was time to checkout. I chose a souvenir and left the inn.
+その後は部屋で一緒にくつろいだり、旅館の周りを散策したり……。=Then the two of you relaxed in your room and walked around the inn...
+そうして過ごしているうちにチェックアウトの時間が迫り、土産を選んで旅館を後にしたのだった。=And like that, it was time to checkout. You chose a souvenir and left the inn.
 さすがに夕も疲れたのか、帰りの電車ではぐっすりと眠っている。=As expected, Yuu was tired and fell asleep on the train ride back.
 えへへ……おじさん、また行こうね……。=Ehehe...Oji-san, let's go again sometime...
 夕の寝言を聞いて、あなたは思いを巡らせる。=Listening to Yuu's murmurs, you felt overwhelming emotions.
-今度はもう少し遠くまで行こう。何日間かゆっくりと過ごせるように、もっと長めの休みを使って……。=Next time we'll go somewhere farther. I'll get a longer break so we can enjoy ourselves for longer.
+今度はもう少し遠くまで行こう。何日間かゆっくりと過ごせるように、もっと長めの休みを使って……。='Next time we'll go somewhere farther. I'll get a longer break so we can enjoy ourselves even more.'
 幸せな計画を立てているうちに、あなたもやがて眠りへと落ちる。=As you thought up such joyful plans, you soon fell asleep.
 気が付いた頃には、自宅の最寄り駅に着いていた。=Before you realized it, you were at the station near home.
 
