--- a/Translation/Sex Scene.txt
+++ b/Translation/Sex Scene.txt
@@ -1708,7 +1708,7 @@
 誰がいるわけでもないのに、夕は声を潜めていた。=Even though it was just the two of you, Yuu was trying to hide her voice.
 興奮しているのかとからかうと薄く笑って、あなたの内股に手を伸ばしてくる。=You made a nervous laugh while she reached for your crotch.
 おじさんだって……おちんぽ、大っきくなってるよ？=Even Oji-san's...penis, is getting bigger you know?
-柔らかな指が亀頭を優しく撫で回し、遠慮のない手つきでペニスを扱く。=She stroked her soft finger down your tip, then gently gripped your shaft with her other hand.
+柔らかな指が亀頭を優しく撫で回し、遠慮のない手つきでペニスを扱く。=She stroked with her soft finger down your tip, then gently gripped your shaft with her other hand.
 うふふ……ほーら……カチカチに、なっちゃったね……＠=Ufufu...Look...It's already twitching...
 うふふ……ほーら……カチカチに、なっちゃったね……=Ufufu...Look...It's already twitching...
 うふふ……ほーら……カチカチに、なっちゃったね……<color%3D#fca4bc>❤<color%3Dwhite>=Ufufu...Look...It's already twitching...<color%3D#fca4bc>❤<color%3Dwhite>
@@ -1733,15 +1733,15 @@
 ふあっ……あっ……すご……い……=Fuaa...Aa...Amaz-...ing...
 　腰、とろけちゃう……=My waist, it's melting...
 ふあっ……あっ……すご……い……<color%3D#fca4bc>❤<color%3Dwhite>　腰、とろけちゃう……<color%3D#fca4bc>❤<color%3Dwhite>=Fuaa...Aa...Amaz-...ing...<color%3D#fca4bc>❤<color%3Dwhite>My waist, it's melting...<color%3D#fca4bc>❤<color%3Dwhite>
-夕の言葉通り、湯船の中で繋がるのは格別な気持ち良さがあった。=As Yuu said, it felt even better being connected in the hot springs.
+夕の言葉通り、湯船の中で繋がるのは格別な気持ち良さがあった。=As Yuu said, it felt even better being connected in the hot spring.
 はぁ……あっ……んっ、んんんっ……あっ、はん……＠=Haa...Aa...Nn, Nnnn...Aa, Han...
 はぁ……あっ……んっ、んんんっ……あっ、はん……=Haa...Aa...Nn, Nnnn...Aa, Han...
 はぁ……あっ……んっ、んんんっ……あっ、はん……<color%3D#fca4bc>❤<color%3Dwhite>=Haa...Aa...Nn, Nnnn...Aa, Han...<color%3D#fca4bc>❤<color%3Dwhite>
 どちらからともなく腰を動かして、欲望の赴くまま快感を貪り合う。=You started shaking your waist without saying anything, giving in to your desires due to the pleasure.
-はぁっ……あっ、はぁっ……やっ……おちんぽ、熱い……気持ちいい……＠=Haa...Aa, Haa...Yaa...Your penis, its so hot...it feels amazing...
-はぁっ……あっ、はぁっ……やっ……おちんぽ、熱い……気持ちいい……=Haa...Aa, Haa...Yaa...Your penis, its so hot...it feels amazing...
-はぁっ……あっ、はぁっ……やっ……おちんぽ、熱い……気持ちいい……<color%3D#fca4bc>❤<color%3Dwhite>=Haa...Aa, Haa...Yaa...Your penis, its so hot...it feels amazing...<color%3D#fca4bc>❤<color%3Dwhite>
-澄み切った空気の中で、熱に浮かされたような夕の声が妙に響いて聞こえる。=Maybe it was because of the hot springs, but Yuu's voice sounded feverish.
+はぁっ……あっ、はぁっ……やっ……おちんぽ、熱い……気持ちいい……＠=Haa...Aa, Haa...Yaa...Your penis, it's so hot...it feels amazing...
+はぁっ……あっ、はぁっ……やっ……おちんぽ、熱い……気持ちいい……=Haa...Aa, Haa...Yaa...Your penis, it's so hot...it feels amazing...
+はぁっ……あっ、はぁっ……やっ……おちんぽ、熱い……気持ちいい……<color%3D#fca4bc>❤<color%3Dwhite>=Haa...Aa, Haa...Yaa...Your penis, it's so hot...it feels amazing...<color%3D#fca4bc>❤<color%3Dwhite>
+澄み切った空気の中で、熱に浮かされたような夕の声が妙に響いて聞こえる。=Maybe it was because of the hot spring, but Yuu's voice sounded feverish.
 あっ、あっ……ふぁ……あっ……あぅ……はぁっ……＠=Aa, Aa...Fa...Aa...Au...Haaa...
 あっ、あっ……ふぁ……あっ……あぅ……はぁっ……=Aa, Aa...Fa...Aa...Au...Haaa...
 あっ、あっ……ふぁ……あっ……あぅ……はぁっ……<color%3D#fca4bc>❤<color%3Dwhite>=Aa, Aa...Fa...Aa...Au...Haaa...<color%3D#fca4bc>❤<color%3Dwhite>
@@ -1822,7 +1822,7 @@
 ん……んんっ……～～～っ＠　=Nn...Nnn... ～～～
 ん……んんっ……～～～っ=Nn...Nnn... ～～～
 ん……んんっ……～～～っ<color%3D#fca4bc>❤<color%3Dwhite>　=Nn...Nnn... ～～～<color%3D#fca4bc>❤<color%3Dwhite>　
-クリトリスが潰れそうなほど下腹部をぐりぐりと強く押しつけながら、夕も少し遅れて絶頂に達する。=While pressing down hard enough that her pressed against your abdomen, Yuu also reached her climax a bit after.
+クリトリスが潰れそうなほど下腹部をぐりぐりと強く押しつけながら、夕も少し遅れて絶頂に達する。=While pressing down hard enough that she pressed against your abdomen, Yuu also reached her climax a bit after.
 ふぅっ……ふっ、はぁー……＠　はぁー……＠　はぁ……ふぁっ……＠=Fuuu...Fuu, Haaa...Haaa...Haa...Faa...
 　はぁ……ふぁっ……=Haa...Faa...
 ふぅっ……ふっ、はぁー……=Fuuu...Fuu, Haaa...
