--- a/Translation/Interaction Screen.txt
+++ b/Translation/Interaction Screen.txt
@@ -102,7 +102,7 @@ Aa...う、うん。しよっか。=Aa...O-Ok. Shall we?
 ……おじさん。それ、私にも何か手伝えないかな？=...Oji-san. Well, is there work I can help you with?
 あなたが何かしているといつも隣で見ている夕が、今日はそんなことを言ってくる。=Yuu said that after having watched over you work for a while now.
 あなたがやっていたことは簡単なツールの作成と、その動作テストだった。=You were just creating a simple tool and testing it.
-扱うデータは仮のものなので、見せても問題はない。チェック項目も決まっている。少し教えれば夕もできるだろう。=It was fine to show her the data, since it was just a sample. The checklist looked fine too. You could spare some time to teach Yuu how to use it.
+扱うデータは仮のものなので、見せても問題はない。チェック項目も決まっている。少し教えれば夕もできるだろう。=It was fine to show her the data, since it was just a sample. The checklist looked fine too. You could spare some time to teach Yuu.
 私もちゃんと、勉強してるんだからね。= I've been studying properly.
 ふふふ、任せてよおじさん……=Fufufu, leave it to me Oji-san.
 ふふふ、任せてよおじさん……私もちゃんと、勉強してるんだからね。=Fufufu, leave it to me Oji-san. I've been studying properly.
